[gd_scene load_steps=4 format=3 uid="uid://chbmbf0ki24bj"]

[ext_resource type="Script" uid="uid://bem3wq4uda4uo" path="res://scripts/systems/office_shutter/office_shutter_controller.gd" id="1_rqpmp"]
[ext_resource type="Texture2D" uid="uid://bvguhhxihdmr1" path="res://assets/office_shutter/office_shutter_texture.png" id="1_u4acs"]
[ext_resource type="Texture2D" uid="uid://bkyj2cixumjxq" path="res://assets/office_shutter/shutter_lever.png" id="3_lxoh3"]

[node name="OfficeShutterController" type="Node2D"]
z_index = 5
script = ExtResource("1_rqpmp")

[node name="ShutterLever" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-167, -92)
scale = Vector2(2.96483, 2.96483)
texture = ExtResource("3_lxoh3")

[node name="Shutter" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Shutter"]
scale = Vector2(2.5, 2.7)
texture = ExtResource("1_u4acs")

[node name="ShutterAudioStream" type="AudioStreamPlayer2D" parent="Shutter"]

[node name="StartNode" type="Node2D" parent="."]

[node name="EndNode" type="Node2D" parent="."]
position = Vector2(0, -263)
